現地調査1Fページ：検査項目タブ・動的フォームUI実装、調査項目リスト更新

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body id="index-page">
     <!-- ヘッダー -->
     <header class="text-center">
-        <h1><img src="../images/houscan_logo.webp" alt="HOUSCAN Logo" width="45" height="45" class="d-inline-block align-text-top mx-2">
+        user_project_detail.html   <h1><img src="../images/houscan_logo.webp" alt="HOUSCAN Logo" width="45" height="45" class="d-inline-block align-text-top mx-2">
         Welcome to MOC HOUSCAN</h1>
     </header>
 
