--- a/system_user_cms/user_project_detail_investigate.html
+++ b/system_user_cms/user_project_detail_investigate.html
@@ -81,34 +81,22 @@
         <!-- サブタブ nav-pills（右寄せ） -->
         <ul class="nav nav-pills justify-content-end mb-4" id="investigateSubTabs" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="sub-cust-tab" data-bs-toggle="tab" data-bs-target="#sub-cust" type="button" role="tab">
-                    <i class="bi bi-person-lines-fill"></i> お客様調整
-                </button>
+                <a class="nav-link active" href="user_project_detail_investigate.html"><i class="bi bi-person-lines-fill"></i> お客様調整</a>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="sub-drawing-tab" data-bs-toggle="tab" data-bs-target="#sub-drawing" type="button" role="tab">
-                    <i class="bi bi-pencil-square"></i> 図面作成
-                </button>
+                <a class="nav-link" href="user_project_detail_investigate_create_figure.html"><i class="bi bi-pencil-square"></i> 図面作成</a>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="sub-edit-tab" data-bs-toggle="tab" data-bs-target="#sub-edit" type="button" role="tab">
-                    <i class="bi bi-clipboard-data"></i> 調査・編集
-                </button>
+                <a class="nav-link" href="user_project_detail_investigate_edit.html"><i class="bi bi-clipboard-data"></i> 調査・編集</a>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="sub-result-tab" data-bs-toggle="tab" data-bs-target="#sub-result" type="button" role="tab">
-                    <i class="bi bi-clipboard-check"></i> 調査結果
-                </button>
+                <a class="nav-link" href="user_project_detail_investigate_result.html"><i class="bi bi-clipboard-check"></i> 調査結果</a>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="sub-images-tab" data-bs-toggle="tab" data-bs-target="#sub-images" type="button" role="tab">
-                    <i class="bi bi-images"></i> 画像一覧
-                </button>
+                <a class="nav-link" href="user_project_detail_investigate_images.html"><i class="bi bi-images"></i> 画像一覧</a>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="sub-report-tab" data-bs-toggle="tab" data-bs-target="#sub-report" type="button" role="tab">
-                    <i class="bi bi-file-earmark-text"></i> 報告書プレビュー
-                </button>
+                <a class="nav-link" href="user_project_detail_investigate_report.html"><i class="bi bi-file-earmark-text"></i> 報告書プレビュー</a>
             </li>
         </ul>
         <div class="tab-content">
