プラン作成機能の改修: 既存図作成ページの追加、3カラムレイアウトの実装、モーダルのタブ化、ナビゲーションの統一

--- a/system_user_cms/user_project_detail_design_finance.html
+++ b/system_user_cms/user_project_detail_design_finance.html
@@ -73,6 +73,9 @@
             <a class="nav-link" href="user_project_detail_design.html"><i class="bi bi-sticky"></i> 概要</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="user_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="user_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
           </li>
           <li class="nav-item">
