--- a/user_site/site_project_detail_design.html
+++ b/user_site/site_project_detail_design.html
@@ -62,6 +62,9 @@
             <a class="nav-link active" href="site_project_detail_design.html"><i class="bi bi-sticky"></i>概要</a>
           </li>
           <li class="nav-item">
+          <a class="nav-link" href="site_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="site_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
         </li>
         <li class="nav-item">
@@ -134,37 +137,6 @@
             </tr>
           </tbody>
         </table>
-      </div>
-    </div>
-
-    <!-- フロアープランセクション -->
-    <div class="mb-2 px-3">
-      <h5 class="mb-0">フロアープラン</h5>
-    </div>
-    <div id="floorView" class="row g-3 px-3">
-      <div class="col-6 col-md-4 col-lg-3">
-        <a href="site_project_detail_design_1f.html" class="text-decoration-none text-reset">
-          <div class="card card-project h-100">
-            <div class="card-header">1F</div>
-            <img src="../images/1F.webp" class="card-img-top" alt="1F画像">
-          </div>
-        </a>
-      </div>
-      <div class="col-6 col-md-4 col-lg-3">
-        <a href="site_project_detail_design_1f.html" class="text-decoration-none text-reset">
-          <div class="card card-project h-100">
-            <div class="card-header">2F</div>
-            <img src="../images/2f.webp" class="card-img-top" alt="2F画像">
-          </div>
-        </a>
-      </div>
-      <div class="col-6 col-md-4 col-lg-3">
-        <a href="site_project_detail_design_1f.html" class="text-decoration-none text-reset">
-          <div class="card card-project h-100">
-            <div class="card-header">敷地図</div>
-            <img src="../images/2f.webp" class="card-img-top" alt="敷地図画像">
-          </div>
-        </a>
       </div>
     </div>
 
