フロアプランエディターの追加と既存図作成機能の改善

--- a/user_site/site_project_detail_design_finance.html
+++ b/user_site/site_project_detail_design_finance.html
@@ -56,7 +56,10 @@
       <!-- nav-pills に変更 -->
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a class="nav-link" href="site_project_detail_design.html"><i class="bi bi-sticky"></i> 概要</a>
+          <a class="nav-link" href="site_project_detail_design.html"><i class="bi bi-sticky"></i>概要</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="site_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="site_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
