--- a/user_site/site_project_detail_design_estimate.html
+++ b/user_site/site_project_detail_design_estimate.html
@@ -60,6 +60,9 @@
             <a class="nav-link" href="site_project_detail_design.html"><i class="bi bi-sticky"></i>概要</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="site_project_detail_design_1f.html"><i class="bi bi-pencil"></i> プラン作成</a>
+          </li>
+          <li class="nav-item">
           <a class="nav-link active" href="site_project_detail_design_estimate.html"><i class="bi bi-calculator"></i> 見積もり</a>
         </li>
         <li class="nav-item">
