資金計画設定タブの更新とテーブルタイトルの修正

--- a/system_user_cms/user_project_detail_design.html
+++ b/system_user_cms/user_project_detail_design.html
@@ -97,13 +97,13 @@
             <table class="table table-bordered info-table mb-0">
               <tbody>
                 <tr>
-                  <th class="table-light">工事名</th>
+                  <th class="table-light">物件名</th>
                   <td>東京渋谷様邸</td>
                   <th class="table-light">種別</th>
                   <td>リノベーション</td>
                 </tr>
                 <tr>
-                  <th class="table-light">建築場所</th>
+                  <th class="table-light">物件住所</th>
                   <td>東京都渋谷区渋谷</td>
                   <th class="table-light">見積番号</th>
                   <td>001-2022-0324</td>
@@ -128,18 +128,18 @@
                       <tbody>
                         <tr>
                           <td>1階</td>
-                          <td class="text-end">50.00</td>
-                          <td class="text-end">15.12</td>
+                          <td class="text-end">50.00（㎡）</td>
+                          <td class="text-end">15.12(坪)</td>
                         </tr>
                         <tr>
                           <td>2階</td>
-                          <td class="text-end">50.00</td>
-                          <td class="text-end">15.12</td>
+                          <td class="text-end">50.00（㎡）</td>
+                          <td class="text-end">15.12(坪)</td>
                         </tr>
                         <tr>
                           <td>延べ床</td>
-                          <td class="text-end">100.00</td>
-                          <td class="text-end">30.25</td>
+                          <td class="text-end">100.00（㎡）</td>
+                          <td class="text-end">30.25(坪)</td>
                         </tr>
                       </tbody>
                     </table>
